# cgo_multiversion_go_lib

./: .gitignore  README.md  build.sh  go.mod  lib_test.go  lib_v1.go  lib_v2.go
v1/: CMakeLists.txt  lib.c  lib.go  lib.h
v2/: CMakeLists.txt  lib.c  lib.go  lib.h
